calculator.peg.go
// Code generated by peg calculator.peg. DO NOT EDIT.

// Copyright 2020 The Calc Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

package calc

import (
	"bytes"
	"fmt"
	"io"
	"os"
	"slices"
	"strconv"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	rulee
	rulee1
	rulee2
	rulee3
	rulee4
	rulevalue
	rulevariable
	rulematrix
	ruleimaginary
	rulenumber
	ruledecimal
	rulenotation
	ruleexp1
	ruleexp2
	rulenatural
	rulepi
	ruleprec
	rulesimplify
	rulederivative
	rulelog
	rulesqrt
	rulecos
	rulesin
	ruletan
	rulesub
	ruleadd
	ruleminus
	rulemultiply
	ruledivide
	rulemodulus
	ruleexponentiation
	ruleopen
	ruleclose
	rulesp
	rulerow
)

var rul3s = [...]string{
	"Unknown",
	"e",
	"e1",
	"e2",
	"e3",
	"e4",
	"value",
	"variable",
	"matrix",
	"imaginary",
	"number",
	"decimal",
	"notation",
	"exp1",
	"exp2",
	"natural",
	"pi",
	"prec",
	"simplify",
	"derivative",
	"log",
	"sqrt",
	"cos",
	"sin",
	"tan",
	"sub",
	"add",
	"minus",
	"multiply",
	"divide",
	"modulus",
	"exponentiation",
	"open",
	"close",
	"sp",
	"row",
}

type Uint interface {
	~uint | ~uint8 | ~uint16 | ~uint32 | ~uint64
}

type token[U Uint] struct {
	pegRule
	begin, end U
}

func (t *token[_]) String() string {
	// \x1B[34m = blue
	// \x1B[m   = normal (disable color)
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node[U Uint] struct {
	token[U]
	up, next *node[U]
}

func (n *node[U]) print(w io.Writer, pretty bool, buffer string) {
	var printFunc func(n *node[U], depth int)
	printFunc = func(n *node[U], depth int) {
		for n != nil {
			for range depth {
				fmt.Fprint(w, " ")
			}
			rule := rul3s[n.pegRule]
			quote := strconv.Quote(string([]rune(buffer)[n.begin:n.end]))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if n.up != nil {
				printFunc(n.up, depth+1)
			}
			n = n.next
		}
	}
	printFunc(n, 0)
}

func (n *node[_]) Print(w io.Writer, buffer string) {
	n.print(w, false, buffer)
}

func (n *node[_]) PrettyPrint(w io.Writer, buffer string) {
	n.print(w, true, buffer)
}

type tokens[U Uint] struct {
	tree []token[U]
}

func (t *tokens[_]) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens[_]) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens[U]) AST() *node[U] {
	type element struct {
		node *node[U]
		down *element
	}
	tokenSlice := t.Tokens()
	var stack *element
	for _, token := range tokenSlice {
		if token.begin == token.end {
			continue
		}
		node := &node[U]{token: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens[_]) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens[_]) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens[_]) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens[U]) Add(rule pegRule, begin, end, index U) {
	tree, i := t.tree, int(index)
	newToken := token[U]{pegRule: rule, begin: begin, end: end}

	if i >= len(tree) {
		t.tree = append(tree, newToken)
		return
	}
	tree[i] = newToken
}

func (t *tokens[U]) Tokens() []token[U] {
	return t.tree
}

type Calculator[U Uint] struct {
	Buffer         string
	buffer         []rune
	rules          [36]func() bool
	parse          func(rule ...int) error
	reset          func()
	Pretty         bool
	disableMemoize bool
	tokens[U]
}

func (p *Calculator[_]) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *Calculator[_]) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length := len(positions)
	translations := make(textPositionMap, length)
	posIdx := 0
	line := 1
	symbol := 0

	slices.Sort(positions)

	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[posIdx] {
			translations[positions[posIdx]] = textPosition{line, symbol}
			for posIdx++; posIdx < length; posIdx++ {
				if i == positions[posIdx] {
					return translations
				}
			}
		}
		if posIdx >= length {
			break
		}
	}

	return translations
}

type parseError[U Uint] struct {
	p        *Calculator[U]
	maxToken token[U]
}

func (e *parseError[U]) Error() string {
	tokenSlice, err := []token[U]{e.maxToken}, "\n"
	positions, p := make([]int, 2*len(tokenSlice)), 0
	for _, t := range tokenSlice {
		positions[p], p = int(t.begin), p+1
		positions[p], p = int(t.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, t := range tokenSlice {
		begin, end := int(t.begin), int(t.end)
		err += fmt.Sprintf(format,
			rul3s[t.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *Calculator[_]) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens.PrintSyntaxTree(p.Buffer)
	}
}

func (p *Calculator[_]) WriteSyntaxTree(w io.Writer) {
	p.tokens.WriteSyntaxTree(w, p.Buffer)
}

func (p *Calculator[_]) SprintSyntaxTree() string {
	var b bytes.Buffer
	p.WriteSyntaxTree(&b)
	return b.String()
}

func Pretty[U Uint](pretty bool) func(*Calculator[U]) error {
	return func(p *Calculator[U]) error {
		p.Pretty = pretty
		return nil
	}
}

func Size[U Uint](size int) func(*Calculator[U]) error {
	return func(p *Calculator[U]) error {
		p.tokens = tokens[U]{tree: make([]token[U], 0, size)}
		return nil
	}
}

func DisableMemoize[U Uint]() func(*Calculator[U]) error {
	return func(p *Calculator[U]) error {
		p.disableMemoize = true
		return nil
	}
}

type memo[U Uint] struct {
	Matched bool
	Partial []token[U]
}

type memoKey[U Uint] struct {
	Rule     U
	Position U
}

func (p *Calculator[U]) Init(options ...func(*Calculator[U]) error) error {
	var (
		maxToken             token[U]
		position, tokenIndex U
		buffer               []rune
		memoization          map[memoKey[U]]memo[U]
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		maxToken = token[U]{}
		position, tokenIndex = 0, 0
		memoization = make(map[memoKey[U]]memo[U])
		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens = tree
		if matches {
			p.Trim(uint32(tokenIndex))
			return nil
		}
		return &parseError[U]{p, maxToken}
	}

	add := func(rule pegRule, begin U) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > maxToken.end {
			maxToken = token[U]{rule, begin, position}
		}
	}

	memoize := func(rule U, begin U, tokenIndexStart U, matched bool) {
		if p.disableMemoize {
			return
		}
		key := memoKey[U]{rule, begin}
		if !matched {
			memoization[key] = memo[U]{Matched: false}
		} else {
			memoization[key] = memo[U]{
				Matched: true,
				Partial: slices.Clone(tree.tree[tokenIndexStart:tokenIndex]),
			}
		}
	}

	memoizedResult := func(m memo[U]) bool {
		if !m.Matched {
			return false
		}
		tree.tree = append(tree.tree[:tokenIndex], m.Partial...)
		tokenIndex += U(len(m.Partial))
		position = m.Partial[len(m.Partial)-1].end
		if tree.tree[tokenIndex-1].begin != position && position > maxToken.end {
			maxToken = tree.tree[tokenIndex-1]
		}
		return true
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	_rules = [...]func() bool{
		nil,

		/* 0 e <- <(sp e1 !.)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{0, position}]; ok {
				return memoizedResult(memoized)
			}
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				_rules[rulesp]()
				if !_rules[rulee1]() {
					goto l0
				}
				{
					position2, tokenIndex2 := position, tokenIndex
					if !matchDot() {
						goto l2
					}
					goto l0
				l2:
					position, tokenIndex = position2, tokenIndex2
				}
				add(rulee, position1)
			}
			memoize(0, position0, tokenIndex0, true)
			return true
		l0:
			memoize(0, position0, tokenIndex0, false)
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 e1 <- <(e2 ((add e2) / (minus e2))*)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{1, position}]; ok {
				return memoizedResult(memoized)
			}
			position3, tokenIndex3 := position, tokenIndex
			{
				position4 := position
				if !_rules[rulee2]() {
					goto l3
				}
			l5:
				{
					position6, tokenIndex6 := position, tokenIndex
					{
						position7, tokenIndex7 := position, tokenIndex
						if !_rules[ruleadd]() {
							goto l8
						}
						if !_rules[rulee2]() {
							goto l8
						}
						goto l7
					l8:
						position, tokenIndex = position7, tokenIndex7
						if !_rules[ruleminus]() {
							goto l6
						}
						if !_rules[rulee2]() {
							goto l6
						}
					}
				l7:
					goto l5
				l6:
					position, tokenIndex = position6, tokenIndex6
				}
				add(rulee1, position4)
			}
			memoize(1, position3, tokenIndex3, true)
			return true
		l3:
			memoize(1, position3, tokenIndex3, false)
			position, tokenIndex = position3, tokenIndex3
			return false
		},
		/* 2 e2 <- <(e3 ((multiply e3) / (divide e3) / (modulus e3))*)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{2, position}]; ok {
				return memoizedResult(memoized)
			}
			position9, tokenIndex9 := position, tokenIndex
			{
				position10 := position
				if !_rules[rulee3]() {
					goto l9
				}
			l11:
				{
					position12, tokenIndex12 := position, tokenIndex
					{
						position13, tokenIndex13 := position, tokenIndex
						if !_rules[rulemultiply]() {
							goto l14
						}
						if !_rules[rulee3]() {
							goto l14
						}
						goto l13
					l14:
						position, tokenIndex = position13, tokenIndex13
						if !_rules[ruledivide]() {
							goto l15
						}
						if !_rules[rulee3]() {
							goto l15
						}
						goto l13
					l15:
						position, tokenIndex = position13, tokenIndex13
						if !_rules[rulemodulus]() {
							goto l12
						}
						if !_rules[rulee3]() {
							goto l12
						}
					}
				l13:
					goto l11
				l12:
					position, tokenIndex = position12, tokenIndex12
				}
				add(rulee2, position10)
			}
			memoize(2, position9, tokenIndex9, true)
			return true
		l9:
			memoize(2, position9, tokenIndex9, false)
			position, tokenIndex = position9, tokenIndex9
			return false
		},
		/* 3 e3 <- <(e4 (exponentiation e4)*)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{3, position}]; ok {
				return memoizedResult(memoized)
			}
			position16, tokenIndex16 := position, tokenIndex
			{
				position17 := position
				if !_rules[rulee4]() {
					goto l16
				}
			l18:
				{
					position19, tokenIndex19 := position, tokenIndex
					if !_rules[ruleexponentiation]() {
						goto l19
					}
					if !_rules[rulee4]() {
						goto l19
					}
					goto l18
				l19:
					position, tokenIndex = position19, tokenIndex19
				}
				add(rulee3, position17)
			}
			memoize(3, position16, tokenIndex16, true)
			return true
		l16:
			memoize(3, position16, tokenIndex16, false)
			position, tokenIndex = position16, tokenIndex16
			return false
		},
		/* 4 e4 <- <((minus value) / value)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{4, position}]; ok {
				return memoizedResult(memoized)
			}
			position20, tokenIndex20 := position, tokenIndex
			{
				position21 := position
				{
					position22, tokenIndex22 := position, tokenIndex
					if !_rules[ruleminus]() {
						goto l23
					}
					if !_rules[rulevalue]() {
						goto l23
					}
					goto l22
				l23:
					position, tokenIndex = position22, tokenIndex22
					if !_rules[rulevalue]() {
						goto l20
					}
				}
			l22:
				add(rulee4, position21)
			}
			memoize(4, position20, tokenIndex20, true)
			return true
		l20:
			memoize(4, position20, tokenIndex20, false)
			position, tokenIndex = position20, tokenIndex20
			return false
		},
		/* 5 value <- <(matrix / imaginary / number / exp1 / exp2 / natural / pi / prec / simplify / derivative / log / sqrt / cos / sin / tan / variable / sub)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{5, position}]; ok {
				return memoizedResult(memoized)
			}
			position24, tokenIndex24 := position, tokenIndex
			{
				position25 := position
				{
					position26, tokenIndex26 := position, tokenIndex
					if !_rules[rulematrix]() {
						goto l27
					}
					goto l26
				l27:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[ruleimaginary]() {
						goto l28
					}
					goto l26
				l28:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulenumber]() {
						goto l29
					}
					goto l26
				l29:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[ruleexp1]() {
						goto l30
					}
					goto l26
				l30:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[ruleexp2]() {
						goto l31
					}
					goto l26
				l31:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulenatural]() {
						goto l32
					}
					goto l26
				l32:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulepi]() {
						goto l33
					}
					goto l26
				l33:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[ruleprec]() {
						goto l34
					}
					goto l26
				l34:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulesimplify]() {
						goto l35
					}
					goto l26
				l35:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulederivative]() {
						goto l36
					}
					goto l26
				l36:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulelog]() {
						goto l37
					}
					goto l26
				l37:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulesqrt]() {
						goto l38
					}
					goto l26
				l38:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulecos]() {
						goto l39
					}
					goto l26
				l39:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulesin]() {
						goto l40
					}
					goto l26
				l40:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[ruletan]() {
						goto l41
					}
					goto l26
				l41:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulevariable]() {
						goto l42
					}
					goto l26
				l42:
					position, tokenIndex = position26, tokenIndex26
					if !_rules[rulesub]() {
						goto l24
					}
				}
			l26:
				add(rulevalue, position25)
			}
			memoize(5, position24, tokenIndex24, true)
			return true
		l24:
			memoize(5, position24, tokenIndex24, false)
			position, tokenIndex = position24, tokenIndex24
			return false
		},
		/* 6 variable <- <(([A-Z] / [a-z])+ sp)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{6, position}]; ok {
				return memoizedResult(memoized)
			}
			position43, tokenIndex43 := position, tokenIndex
			{
				position44 := position
				{
					position47, tokenIndex47 := position, tokenIndex
					if c := buffer[position]; c < 'A' || c > 'Z' {
						goto l48
					}
					position++
					goto l47
				l48:
					position, tokenIndex = position47, tokenIndex47
					if c := buffer[position]; c < 'a' || c > 'z' {
						goto l43
					}
					position++
				}
			l47:
			l45:
				{
					position46, tokenIndex46 := position, tokenIndex
					{
						position49, tokenIndex49 := position, tokenIndex
						if c := buffer[position]; c < 'A' || c > 'Z' {
							goto l50
						}
						position++
						goto l49
					l50:
						position, tokenIndex = position49, tokenIndex49
						if c := buffer[position]; c < 'a' || c > 'z' {
							goto l46
						}
						position++
					}
				l49:
					goto l45
				l46:
					position, tokenIndex = position46, tokenIndex46
				}
				_rules[rulesp]()
				add(rulevariable, position44)
			}
			memoize(6, position43, tokenIndex43, true)
			return true
		l43:
			memoize(6, position43, tokenIndex43, false)
			position, tokenIndex = position43, tokenIndex43
			return false
		},
		/* 7 matrix <- <('[' sp (e1 / row)+ ']' sp)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{7, position}]; ok {
				return memoizedResult(memoized)
			}
			position51, tokenIndex51 := position, tokenIndex
			{
				position52 := position
				if buffer[position] != '[' {
					goto l51
				}
				position++
				_rules[rulesp]()
				{
					position55, tokenIndex55 := position, tokenIndex
					if !_rules[rulee1]() {
						goto l56
					}
					goto l55
				l56:
					position, tokenIndex = position55, tokenIndex55
					if !_rules[rulerow]() {
						goto l51
					}
				}
			l55:
			l53:
				{
					position54, tokenIndex54 := position, tokenIndex
					{
						position57, tokenIndex57 := position, tokenIndex
						if !_rules[rulee1]() {
							goto l58
						}
						goto l57
					l58:
						position, tokenIndex = position57, tokenIndex57
						if !_rules[rulerow]() {
							goto l54
						}
					}
				l57:
					goto l53
				l54:
					position, tokenIndex = position54, tokenIndex54
				}
				if buffer[position] != ']' {
					goto l51
				}
				position++
				_rules[rulesp]()
				add(rulematrix, position52)
			}
			memoize(7, position51, tokenIndex51, true)
			return true
		l51:
			memoize(7, position51, tokenIndex51, false)
			position, tokenIndex = position51, tokenIndex51
			return false
		},
		/* 8 imaginary <- <(decimal notation? 'i' sp)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{8, position}]; ok {
				return memoizedResult(memoized)
			}
			position59, tokenIndex59 := position, tokenIndex
			{
				position60 := position
				if !_rules[ruledecimal]() {
					goto l59
				}
				{
					position61, tokenIndex61 := position, tokenIndex
					if !_rules[rulenotation]() {
						goto l61
					}
					goto l62
				l61:
					position, tokenIndex = position61, tokenIndex61
				}
			l62:
				if buffer[position] != 'i' {
					goto l59
				}
				position++
				_rules[rulesp]()
				add(ruleimaginary, position60)
			}
			memoize(8, position59, tokenIndex59, true)
			return true
		l59:
			memoize(8, position59, tokenIndex59, false)
			position, tokenIndex = position59, tokenIndex59
			return false
		},
		/* 9 number <- <(decimal notation? sp)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{9, position}]; ok {
				return memoizedResult(memoized)
			}
			position63, tokenIndex63 := position, tokenIndex
			{
				position64 := position
				if !_rules[ruledecimal]() {
					goto l63
				}
				{
					position65, tokenIndex65 := position, tokenIndex
					if !_rules[rulenotation]() {
						goto l65
					}
					goto l66
				l65:
					position, tokenIndex = position65, tokenIndex65
				}
			l66:
				_rules[rulesp]()
				add(rulenumber, position64)
			}
			memoize(9, position63, tokenIndex63, true)
			return true
		l63:
			memoize(9, position63, tokenIndex63, false)
			position, tokenIndex = position63, tokenIndex63
			return false
		},
		/* 10 decimal <- <(('-' / '+')? [0-9]+ ('.' [0-9]*)?)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{10, position}]; ok {
				return memoizedResult(memoized)
			}
			position67, tokenIndex67 := position, tokenIndex
			{
				position68 := position
				{
					position69, tokenIndex69 := position, tokenIndex
					{
						position71, tokenIndex71 := position, tokenIndex
						if buffer[position] != '-' {
							goto l72
						}
						position++
						goto l71
					l72:
						position, tokenIndex = position71, tokenIndex71
						if buffer[position] != '+' {
							goto l69
						}
						position++
					}
				l71:
					goto l70
				l69:
					position, tokenIndex = position69, tokenIndex69
				}
			l70:
				if c := buffer[position]; c < '0' || c > '9' {
					goto l67
				}
				position++
			l73:
				{
					position74, tokenIndex74 := position, tokenIndex
					if c := buffer[position]; c < '0' || c > '9' {
						goto l74
					}
					position++
					goto l73
				l74:
					position, tokenIndex = position74, tokenIndex74
				}
				{
					position75, tokenIndex75 := position, tokenIndex
					if buffer[position] != '.' {
						goto l75
					}
					position++
				l77:
					{
						position78, tokenIndex78 := position, tokenIndex
						if c := buffer[position]; c < '0' || c > '9' {
							goto l78
						}
						position++
						goto l77
					l78:
						position, tokenIndex = position78, tokenIndex78
					}
					goto l76
				l75:
					position, tokenIndex = position75, tokenIndex75
				}
			l76:
				add(ruledecimal, position68)
			}
			memoize(10, position67, tokenIndex67, true)
			return true
		l67:
			memoize(10, position67, tokenIndex67, false)
			position, tokenIndex = position67, tokenIndex67
			return false
		},
		/* 11 notation <- <(('e' / 'E') decimal)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{11, position}]; ok {
				return memoizedResult(memoized)
			}
			position79, tokenIndex79 := position, tokenIndex
			{
				position80 := position
				{
					position81, tokenIndex81 := position, tokenIndex
					if buffer[position] != 'e' {
						goto l82
					}
					position++
					goto l81
				l82:
					position, tokenIndex = position81, tokenIndex81
					if buffer[position] != 'E' {
						goto l79
					}
					position++
				}
			l81:
				if !_rules[ruledecimal]() {
					goto l79
				}
				add(rulenotation, position80)
			}
			memoize(11, position79, tokenIndex79, true)
			return true
		l79:
			memoize(11, position79, tokenIndex79, false)
			position, tokenIndex = position79, tokenIndex79
			return false
		},
		/* 12 exp1 <- <('e' 'x' 'p' open e1 close)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{12, position}]; ok {
				return memoizedResult(memoized)
			}
			position83, tokenIndex83 := position, tokenIndex
			{
				position84 := position
				if buffer[position] != 'e' {
					goto l83
				}
				position++
				if buffer[position] != 'x' {
					goto l83
				}
				position++
				if buffer[position] != 'p' {
					goto l83
				}
				position++
				if !_rules[ruleopen]() {
					goto l83
				}
				if !_rules[rulee1]() {
					goto l83
				}
				if !_rules[ruleclose]() {
					goto l83
				}
				add(ruleexp1, position84)
			}
			memoize(12, position83, tokenIndex83, true)
			return true
		l83:
			memoize(12, position83, tokenIndex83, false)
			position, tokenIndex = position83, tokenIndex83
			return false
		},
		/* 13 exp2 <- <('e' '^' value)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{13, position}]; ok {
				return memoizedResult(memoized)
			}
			position85, tokenIndex85 := position, tokenIndex
			{
				position86 := position
				if buffer[position] != 'e' {
					goto l85
				}
				position++
				if buffer[position] != '^' {
					goto l85
				}
				position++
				if !_rules[rulevalue]() {
					goto l85
				}
				add(ruleexp2, position86)
			}
			memoize(13, position85, tokenIndex85, true)
			return true
		l85:
			memoize(13, position85, tokenIndex85, false)
			position, tokenIndex = position85, tokenIndex85
			return false
		},
		/* 14 natural <- <('e' sp)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{14, position}]; ok {
				return memoizedResult(memoized)
			}
			position87, tokenIndex87 := position, tokenIndex
			{
				position88 := position
				if buffer[position] != 'e' {
					goto l87
				}
				position++
				_rules[rulesp]()
				add(rulenatural, position88)
			}
			memoize(14, position87, tokenIndex87, true)
			return true
		l87:
			memoize(14, position87, tokenIndex87, false)
			position, tokenIndex = position87, tokenIndex87
			return false
		},
		/* 15 pi <- <('p' 'i' sp)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{15, position}]; ok {
				return memoizedResult(memoized)
			}
			position89, tokenIndex89 := position, tokenIndex
			{
				position90 := position
				if buffer[position] != 'p' {
					goto l89
				}
				position++
				if buffer[position] != 'i' {
					goto l89
				}
				position++
				_rules[rulesp]()
				add(rulepi, position90)
			}
			memoize(15, position89, tokenIndex89, true)
			return true
		l89:
			memoize(15, position89, tokenIndex89, false)
			position, tokenIndex = position89, tokenIndex89
			return false
		},
		/* 16 prec <- <('p' 'r' 'e' 'c' open e1 close)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{16, position}]; ok {
				return memoizedResult(memoized)
			}
			position91, tokenIndex91 := position, tokenIndex
			{
				position92 := position
				if buffer[position] != 'p' {
					goto l91
				}
				position++
				if buffer[position] != 'r' {
					goto l91
				}
				position++
				if buffer[position] != 'e' {
					goto l91
				}
				position++
				if buffer[position] != 'c' {
					goto l91
				}
				position++
				if !_rules[ruleopen]() {
					goto l91
				}
				if !_rules[rulee1]() {
					goto l91
				}
				if !_rules[ruleclose]() {
					goto l91
				}
				add(ruleprec, position92)
			}
			memoize(16, position91, tokenIndex91, true)
			return true
		l91:
			memoize(16, position91, tokenIndex91, false)
			position, tokenIndex = position91, tokenIndex91
			return false
		},
		/* 17 simplify <- <('s' 'i' 'm' 'p' 'l' 'i' 'f' 'y' open e1 close)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{17, position}]; ok {
				return memoizedResult(memoized)
			}
			position93, tokenIndex93 := position, tokenIndex
			{
				position94 := position
				if buffer[position] != 's' {
					goto l93
				}
				position++
				if buffer[position] != 'i' {
					goto l93
				}
				position++
				if buffer[position] != 'm' {
					goto l93
				}
				position++
				if buffer[position] != 'p' {
					goto l93
				}
				position++
				if buffer[position] != 'l' {
					goto l93
				}
				position++
				if buffer[position] != 'i' {
					goto l93
				}
				position++
				if buffer[position] != 'f' {
					goto l93
				}
				position++
				if buffer[position] != 'y' {
					goto l93
				}
				position++
				if !_rules[ruleopen]() {
					goto l93
				}
				if !_rules[rulee1]() {
					goto l93
				}
				if !_rules[ruleclose]() {
					goto l93
				}
				add(rulesimplify, position94)
			}
			memoize(17, position93, tokenIndex93, true)
			return true
		l93:
			memoize(17, position93, tokenIndex93, false)
			position, tokenIndex = position93, tokenIndex93
			return false
		},
		/* 18 derivative <- <('d' 'e' 'r' 'i' 'v' 'a' 't' 'i' 'v' 'e' open e1 close)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{18, position}]; ok {
				return memoizedResult(memoized)
			}
			position95, tokenIndex95 := position, tokenIndex
			{
				position96 := position
				if buffer[position] != 'd' {
					goto l95
				}
				position++
				if buffer[position] != 'e' {
					goto l95
				}
				position++
				if buffer[position] != 'r' {
					goto l95
				}
				position++
				if buffer[position] != 'i' {
					goto l95
				}
				position++
				if buffer[position] != 'v' {
					goto l95
				}
				position++
				if buffer[position] != 'a' {
					goto l95
				}
				position++
				if buffer[position] != 't' {
					goto l95
				}
				position++
				if buffer[position] != 'i' {
					goto l95
				}
				position++
				if buffer[position] != 'v' {
					goto l95
				}
				position++
				if buffer[position] != 'e' {
					goto l95
				}
				position++
				if !_rules[ruleopen]() {
					goto l95
				}
				if !_rules[rulee1]() {
					goto l95
				}
				if !_rules[ruleclose]() {
					goto l95
				}
				add(rulederivative, position96)
			}
			memoize(18, position95, tokenIndex95, true)
			return true
		l95:
			memoize(18, position95, tokenIndex95, false)
			position, tokenIndex = position95, tokenIndex95
			return false
		},
		/* 19 log <- <('l' 'o' 'g' open e1 close)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{19, position}]; ok {
				return memoizedResult(memoized)
			}
			position97, tokenIndex97 := position, tokenIndex
			{
				position98 := position
				if buffer[position] != 'l' {
					goto l97
				}
				position++
				if buffer[position] != 'o' {
					goto l97
				}
				position++
				if buffer[position] != 'g' {
					goto l97
				}
				position++
				if !_rules[ruleopen]() {
					goto l97
				}
				if !_rules[rulee1]() {
					goto l97
				}
				if !_rules[ruleclose]() {
					goto l97
				}
				add(rulelog, position98)
			}
			memoize(19, position97, tokenIndex97, true)
			return true
		l97:
			memoize(19, position97, tokenIndex97, false)
			position, tokenIndex = position97, tokenIndex97
			return false
		},
		/* 20 sqrt <- <('s' 'q' 'r' 't' open e1 close)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{20, position}]; ok {
				return memoizedResult(memoized)
			}
			position99, tokenIndex99 := position, tokenIndex
			{
				position100 := position
				if buffer[position] != 's' {
					goto l99
				}
				position++
				if buffer[position] != 'q' {
					goto l99
				}
				position++
				if buffer[position] != 'r' {
					goto l99
				}
				position++
				if buffer[position] != 't' {
					goto l99
				}
				position++
				if !_rules[ruleopen]() {
					goto l99
				}
				if !_rules[rulee1]() {
					goto l99
				}
				if !_rules[ruleclose]() {
					goto l99
				}
				add(rulesqrt, position100)
			}
			memoize(20, position99, tokenIndex99, true)
			return true
		l99:
			memoize(20, position99, tokenIndex99, false)
			position, tokenIndex = position99, tokenIndex99
			return false
		},
		/* 21 cos <- <('c' 'o' 's' open e1 close)> */
		func() bool {
			if memoized, ok := memoization[memoKey[U]{21, position}]; ok {
				return memoizedResult(memoized)
			}
			position101, tokenIndex101 := position, tokenIndex
			{
				position102 := position
